# rust-keylib

./: .gitignore  .gitmodules  .pre-commit-config.yaml  API_COMPATIBILITY_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  Makefile  PURE_RUST_INTERFACE_PLAN.md  README.md  RUST_MIGRATION_COMPLETE.md  TESTING_PURE_RUST.md  cliff.toml  pre-commit.sh  test_pin_protocol.md
.ci/: release.sh
.github/: copilot-instructions.md
.github/workflows/: prebuilt.yml  rust.yml
keylib/: Cargo.toml
keylib-crypto/: Cargo.toml
keylib-crypto/src/: ecdh.rs  ecdsa.rs  error.rs  lib.rs  pin_protocol.rs
keylib-ctap/: Cargo.toml
keylib-ctap/src/: authenticator.rs  bridge.rs  callbacks.rs  cbor.rs  dispatcher.rs  extensions.rs  lib.rs  pin_token.rs  status.rs  types.rs
keylib-ctap/src/commands/: client_pin.rs  credential_management.rs  get_assertion.rs  get_info.rs  make_credential.rs  mod.rs  selection.rs
keylib-sys/: Cargo.toml  build.rs
keylib-sys/src/: lib.rs
keylib-transport/: Cargo.toml
keylib-transport/src/: channel.rs  ctaphid.rs  handler.rs  lib.rs  runner.rs  uhid.rs  usb.rs
keylib-transport/tests/: integration_test.rs
keylib/examples/: authenticator.rs  client.rs  client_credential_mgmt.rs  credential_management.rs  custom_commands.rs  pin_protocol.rs  webauthn_flow.rs  webauthn_inmemory.rs
keylib/src/: authenticator.rs  authenticator_config.rs  authenticator_options.rs  callbacks.rs  client.rs  client_pin.rs  credential.rs  credential_management.rs  credentials.rs  ctap_command.rs  ctaphid.rs  custom_command.rs  error.rs  lib.rs  pin.rs  promise.rs  transport.rs  types.rs  uhid.rs
keylib/src/client/: mod.rs  requests.rs  types.rs
keylib/src/common/: client.rs  credential.rs  error.rs  mod.rs
keylib/src/rust_impl/: authenticator.rs  client.rs  client_pin.rs  mod.rs  transport.rs  uhid.rs
keylib/tests/: credential_storage_test.rs  e2e_pure_rust_test.rs  e2e_unified_test.rs  e2e_webauthn_test.rs  e2e_webauthn_test.rs.disabled  integration.rs  webauthn_inmemory_test.rs
soft-fido2/: Cargo.toml
soft-fido2-crypto/src/: pin_protocol.rs
soft-fido2-ctap/: Cargo.toml
soft-fido2-ctap/src/: authenticator.rs  cbor.rs  extensions.rs  types.rs
soft-fido2-ctap/src/commands/: client_pin.rs  get_assertion.rs  get_info.rs  make_credential.rs
soft-fido2-transport/src/: runner.rs
soft-fido2/examples/: authenticator.rs  client.rs  credential_management.rs  virtual_authenticator.rs  webauthn_flow.rs
soft-fido2/src/: authenticator.rs  lib.rs  options.rs  pin.rs  types.rs
soft-fido2/tests/: e2e_webauthn_comprehensive_test.rs  e2e_webauthn_rs_integration_test.rs  e2e_webauthn_rs_test.rs  e2e_webauthn_test.rs  webauthn_compliance_test.rs  webauthn_inmemory_test.rs  webauthn_rs_crypto_test.rs
