[workspace]
members = ["keylib", "keylib-sys"]
resolver = "2"


[workspace.package]
version = "0.2.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.91"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/pando85/rust-keylib"
readme = "README.md"

[workspace.dependencies]
keylib-sys = { path = "keylib-sys", version = "0.2.0" }
