[workspace]
members = ["keylib", "keylib-crypto", "keylib-ctap", "keylib-transport"]
resolver = "2"


[workspace.package]
version = "0.2.3"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.91"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/pando85/rust-keylib"
readme = "README.md"

[workspace.dependencies]
# Cryptography (well-audited crates)
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
subtle = "2.6"

# CBOR serialization
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Utilities
hex = "0.4"

# Transport
hidapi = "2.6"

# Platform-specific (Linux UHID)
nix = { version = "0.29", features = ["fs", "ioctl"] }

# Dev dependencies
base64 = "0.22"
lazy_static = "1.4"
serial_test = "3.0"
serde_cbor = "0.11"
hex-literal = "0.4"
