[package]
name = "keylib-ctap"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Internal dependencies
keylib-crypto = { path = "../keylib-crypto" }

# CBOR serialization
ciborium.workspace = true
serde.workspace = true

# Crypto utilities
sha2.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
hex = "0.4"
