[package]
name = "keylib-sys"
description = "FFI bindings for keylib C API"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[build-dependencies]
bindgen = "0.69"

[features]
default = []
static = []
integration-tests = []

[dependencies]
hidapi = { version = "2.6.3", features = ["linux-static-hidraw"] }
