[package]
name = "keylib-transport"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# USB HID transport (optional)
hidapi = { workspace = true, optional = true }

[features]
default = []
usb = ["dep:hidapi"]
