[package]
name = "keylib"
description = "Keylib bindings"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["usb"]
# Enable USB HID transport (requires libudev on Linux)
usb = ["keylib-transport/usb"]
# Integration tests
integration-tests = []

[dependencies]
# Pure Rust implementation
keylib-crypto = { path = "../keylib-crypto" }
keylib-ctap = { path = "../keylib-ctap", features = ["transport"] }
keylib-transport = { path = "../keylib-transport" }

# CBOR and cryptography
ciborium = "0.2"
p256 = { version = "0.13", features = ["ecdh"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
hkdf = "0.12"
hex = { workspace = true }

[dev-dependencies]
lazy_static = "1.4"
base64 = "0.22"
serial_test = "3.0"
hex = "0.4"
serde_cbor = "0.11"

# Examples
[[example]]
name = "client"

[[example]]
name = "webauthn_flow"

[[example]]
name = "webauthn_inmemory"

[[example]]
name = "authenticator"

[[example]]
name = "pin_protocol"

[[example]]
name = "credential_management"

