[package]
name = "keylib"
description = "Keylib bindings"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["usb"]
# Enable USB HID transport (requires libudev on Linux)
usb = ["keylib-transport/usb"]
# Integration tests
integration-tests = []

[dependencies]
# Pure Rust implementation
keylib-crypto = { path = "../keylib-crypto" }
keylib-ctap = { path = "../keylib-ctap", features = ["transport"] }
keylib-transport = { path = "../keylib-transport" }

# CBOR and cryptography
ciborium.workspace = true
p256.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
aes.workspace = true
cbc.workspace = true
hmac.workspace = true
hkdf.workspace = true
hex.workspace = true

[dev-dependencies]
lazy_static.workspace = true
base64.workspace = true
serial_test.workspace = true
hex.workspace = true
serde_cbor.workspace = true

# Examples
[[example]]
name = "client"

[[example]]
name = "webauthn_flow"

[[example]]
name = "authenticator"

[[example]]
name = "pin_protocol"

[[example]]
name = "credential_management"

