[package]
name = "keylib"
description = "Keylib bindings"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["std", "usb"]
# Enable standard library (required for transport layers)
std = ["keylib-crypto/std", "keylib-ctap/std", "keylib-transport"]
# Enable USB HID transport (requires std and libudev on Linux)
usb = ["std", "keylib-transport/usb"]
# Integration tests
integration-tests = []

[dependencies]
# Pure Rust implementation
keylib-crypto = { path = "../keylib-crypto", default-features = false }
keylib-ctap = { path = "../keylib-ctap", default-features = false }
keylib-transport = { path = "../keylib-transport", optional = true }

# CBOR and cryptography
ciborium.workspace = true
p256.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
aes.workspace = true
cbc.workspace = true
hmac.workspace = true
hkdf.workspace = true
hex.workspace = true
smallvec.workspace = true

# no_std synchronization primitives
spin.workspace = true

[dev-dependencies]
lazy_static.workspace = true
base64.workspace = true
serial_test.workspace = true
hex.workspace = true
serde_cbor.workspace = true

# Examples
[[example]]
name = "client"

[[example]]
name = "webauthn_flow"

[[example]]
name = "authenticator"

[[example]]
name = "pin_protocol"

[[example]]
name = "credential_management"

